Bump plugins, sbt version.